2004-06-17  Mike Kestner  <mkestner@ximian.com>

	* scan-deprecations.cs : kill value__ fields of enum types too.
	* en/*/*.xml : remove value__ fields from enum types. 400 more tba's.

2004-06-15  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : generated summary and remarks for all the On* virtual
	default handler methods. 700 more To be addeds gone.

2004-06-14  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : run updater to 0.98 API.

2004-06-01  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : run updater to fix Rgb method sigs. And LayoutLine.

2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* en/Gtk/Widget.xml: Documented the FocusLineWidth and Flags properties.

2004-06-01  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : run updater to add new protected ctor () 's.

2004-06-01  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/Widget.xml : move existing docs to new method sig.

2004-05-31  Mike Kestner  <mkestner@ximian.com>

	* en/Gdk/Rectangle.xml : docs for newly changed Isect and Union.
	* en/Gdk/WindowClass.xml : move existing docs to new member names.
	* en/Gtk/Widget.xml : run updater for Flags prop addition.

2004-05-28  Mike Kestner  <mkestner@ximian.com>

	* Makefile.am : fix disthook
	* en/*Sharp.xml : kill
	* en/* : run updater again for the TreeModel API change.

2004-05-28  Mike Kestner  <mkestner@ximian.com>

	* en/* : put back all the real docs the updater tossed.

2004-05-28  Mike Kestner  <mkestner@ximian.com>

	* en/* : run updater. fix a few *Sharp copy/pastisms.

2004-05-27  Mike Kestner  <mkestner@ximian.com>

	* en/* : run updater

2004-04-27  John Luke  <jluke@cfl.rr.com>

	* en/Gdk/Threads.xml: document
	* en/Gtk/TargetFlags.xml: document
	* en/Gtk/TreeSelection.xml: add example
	* en/Pango/Layout.xml: add example of drawing text to a Layout

2004-04-12  Mike Kestner  <mkestner@ximian.com>

	* en/GLib/Object.xml : some more docs for the Raw property.

2004-03-17  Alex Combas  <yummyfiddlehead@yahoo.com>