@@ -500,9 +500,9 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
         <Parameter Name="xid" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Adds an X id number to the list of embedded windows.</summary>
         <param name="xid">an object of type <see cref="T:System.UInt32" /></param>
-        <remarks>To be added</remarks>
+        <remarks>This is an advanced feature and is not used by typical code.  The method adds the specified XID to a list of embedded windows that is maintained as object data on the Window object.  This list is used for things like querying X rc settings.</remarks>
       </Docs>
     </Member>
     <Member MemberName="SetWmclass">
@@ -536,9 +536,9 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
         <Parameter Name="xid" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Removes an X id number to the list of embedded windows.</summary>
         <param name="xid">an object of type <see cref="T:System.UInt32" /></param>
-        <remarks>To be added</remarks>
+        <remarks>This is an advanced feature and is not used by typical code.  The method removess the specified XID to a list of embedded windows that is maintained as object data on the Window object.  This list is used for things like querying X rc settings.</remarks>
       </Docs>
     </Member>
     <Member MemberName="SetDefaultSize">
@@ -1165,8 +1165,8 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>KeysChanged event.</summary>
+        <remarks>This event is emited when the <see cref="T:Gtk.AccelGroup"/> or mnemonic associated with the <see cref="T:Gtk.Window"/> is changed.</remarks>
       </Docs>
     </Member>
     <Member MemberName="MoveFocus">
@@ -1177,8 +1177,8 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>MoveFocus event.</summary>
+        <remarks>This event is emited when the focus is moved from one child to another.</remarks>
       </Docs>
     </Member>
     <Member MemberName="SetFocus">
@@ -1189,8 +1189,8 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>SetFocus event.</summary>
+        <remarks>This event is emited when the focused widget is set.</remarks>
       </Docs>
     </Member>
     <Member MemberName="DefaultActivated">
@@ -1201,8 +1201,8 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>DefaultActivated event.</summary>
+        <remarks>This event is emited when the keybinding for default widget activation is triggered.</remarks>
       </Docs>
     </Member>
     <Member MemberName="FocusActivated">
@@ -1213,8 +1213,8 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>FocusActivated event.</summary>
+        <remarks>This event is emited when the keybinding for focused widget activation is triggered.</remarks>
       </Docs>
     </Member>
     <Member MemberName="FrameEvent">
@@ -1225,8 +1225,8 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>FrameEvent event.</summary>
+        <remarks>This event is emited when <see cref="M:Gtk.Window.HasFrame"/> has been set to true and an event occurs on the resulting frame.</remarks>
       </Docs>
     </Member>
     <Member MemberName="AutoStartupNotification">
@@ -1417,9 +1417,9 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Raw Property</summary>
         <returns>a <see cref="T:System.IntPtr" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Returns the native object handle of this <see cref="T:Gtk.Window"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -1430,9 +1430,9 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>GType Property</summary>
         <returns>a <see cref="T:GLib.GType" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Returns the native GObject type for <see cref="T:Gtk.Window"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="OnFrameEvent">
@@ -1525,10 +1525,10 @@ Console.WriteLine("Width: {0}, Height: {1}" , width , height);</code>
         <Parameter Name="gtype" Type="GLib.GType" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Protected constructor.</summary>
         <param name="gtype">a <see cref="T:GLib.GType" /></param>
         <returns>a <see cref="T:Gtk.Window" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Chain to this constructor if you have manually registered a native GType for your subclass.</remarks>
       </Docs>
     </Member>
     <Member MemberName="DefaultIconList">
