@@ -1,5 +1,9 @@
 2004-06-17  Mike Kestner  <mkestner@ximian.com>
 
+	* en/Gtk/Window.xml : document remaining TBAs.
+
+2004-06-17  Mike Kestner  <mkestner@ximian.com>
+
 	* scan-deprecations.cs : kill value__ fields of enum types too.
 	* en/*/*.xml : remove value__ fields from enum types. 400 more tba's.
 
